--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,32 @@
   width: 1280px;
   margin: 0 auto;
 }
+@media (max-width: 1199px){
+  .App {
+    width: 1199px;
+    margin: 0 auto;
+  }
+}
+@media (max-width: 991px){
+  .App {
+    width: 991px;
+    margin: 0 auto;
+  }
+}
+@media (max-width: 767px){
+  .App {
+    width: 767px;
+    margin: 0 auto;
+  }
+}
+@media (max-width: 575.99px){
+  .App {
+    width: 575px;
+    margin: 0 auto;
+  }
+}
+
+
+
+
 
